syntax = "proto3";

package core;
option go_package = "openeuler.io/mesh/api/v1/core;core";

enum RoutingPriority {
  DEFAULT = 0;
  HIGH = 1;
}
